--- a/src/styles/vars.css
+++ b/src/styles/vars.css
@@ -11,5 +11,6 @@
 
     --sidebar-width: 62px;
     --header-height: 68px;
+    --horizontal-scrollbar-height: 9px;
   }
 }
